plugins {
    id 'application'
    id "net.ltgt.errorprone" version "3.0.1"
    id "com.github.johnrengelman.shadow" version "7.1.2"
}

application {
    mainClass = 'com.helium.ingestor.Main'
}

compileJava {
    options.compilerArgs << '-parameters'
}
compileTestJava {
    options.compilerArgs << '-parameters'
}

sourceSets {
    main { java { srcDir 'src/main' } }
    test { java { srcDir 'src/test' } }
}

sourceCompatibility = '17'
targetCompatibility = '17'

repositories {
    mavenCentral()
}

dependencies {
    implementation project(':flower')

    annotationProcessor "org.immutables:value:2.9.2"

    implementation 'com.google.code.findbugs:jsr305:3.0.2'
    implementation 'com.google.guava:guava:31.1-jre'
    implementation 'org.apache.commons:commons-lang3:3.12.0'
    implementation 'com.google.guava:guava-testlib:31.1-jre'

    implementation 'commons-cli:commons-cli:1.5.0'
    implementation 'org.apache.logging.log4j:log4j-api:2.20.0'
    implementation 'org.apache.logging.log4j:log4j-core:2.20.0'
    implementation 'org.apache.logging.log4j:log4j-slf4j-impl:2.20.0'

    implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:2.13.0'
    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.13.0'
    implementation "org.immutables:value-annotations:2.9.2" // or implementation, or compileOnly

    implementation 'com.google.guava:guava-testlib:31.1-jre'
    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-guava:2.13.4'

    implementation 'io.netty:netty-all:4.1.79.Final' // Use the latest version
    implementation 'javax.activation:activation:1.1' // Use the latest version

    testImplementation 'junit:junit:4.13'
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.1'
    testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.9.1'
    testImplementation 'org.mockito:mockito-all:1.10.19'

    annotationProcessor "com.uber.nullaway:nullaway:0.7.9"
    compileOnly "com.google.code.findbugs:jsr305:3.0.2"
    errorprone "com.google.errorprone:error_prone_core:2.10.0"
    errorproneJavac "com.google.errorprone:javac:9+181-r4173-1"
}

test {
    useJUnitPlatform()
}

import net.ltgt.gradle.errorprone.CheckSeverity

tasks.withType(JavaCompile) {
    // remove the if condition if you want to run NullAway on test code
    if (!name.toLowerCase().contains("test") && !name.toLowerCase().contains("build")) {
        options.errorprone {
            check("NullAway", CheckSeverity.ERROR)
            excludedPaths.set("$buildDir/generated/sources/.*")
            option("NullAway:AnnotatedPackages", "com.helium.ingestor")
        }
    } else {
        options.errorprone {
            check("DoNotMock", CheckSeverity.WARN)
        }
    }
}

shadowJar { manifest { attributes 'Main-Class': 'com.helium.ingestor.Main' } }

jar {
    manifest {
        attributes 'Main-Class': 'com.helium.ingestor.Main'
    }
}
